Fix a number of places where reconfiguring with a different installation prefix would fail, because the new path did not get propagated to where it needed to be.  Note this would fail even with --enable-depend.

--- a/src/backend/utils/fmgr/Makefile
+++ b/src/backend/utils/fmgr/Makefile
@@ -24,3 +24,7 @@ SUBSYS.o: $(OBJS)
 
 clean: 
 	rm -f SUBSYS.o $(OBJS)
+
+
+# ensure that changes in PKGLIBDIR propagate to dfmgr.o
+dfmgr.o: dfmgr.c $(top_builddir)/src/Makefile.global
