--- a/src/bin/pg_dump/Makefile
+++ b/src/bin/pg_dump/Makefile
@@ -51,3 +51,7 @@ uninstall:
 
 clean distclean maintainer-clean:
 	rm -f pg_dump$(X) pg_restore$(X) pg_dumpall$(X) $(OBJS) pg_dump.o common.o pg_dump_sort.o pg_restore.o pg_dumpall.o
+
+
+# ensure that changes in bindir etc. propagate into object file
+pg_dumpall.o: pg_dumpall.c $(top_builddir)/src/Makefile.global
