Cleanup: move the 'Value' node into a separate file, rather than putting it in the same file as the 'List' node.

--- a/src/backend/nodes/Makefile
+++ b/src/backend/nodes/Makefile
@@ -14,7 +14,7 @@ include $(top_builddir)/src/Makefile.global
 
 OBJS = nodeFuncs.o nodes.o list.o bitmapset.o \
        copyfuncs.o equalfuncs.o makefuncs.o \
-       outfuncs.o readfuncs.o print.o read.o
+       outfuncs.o readfuncs.o print.o read.o value.o
 
 all: SUBSYS.o
 
