--- a/src/pl/plperl/GNUmakefile
+++ b/src/pl/plperl/GNUmakefile
@@ -37,7 +37,13 @@ SPI.c: SPI.xs
 	$(PERL) $(perl_privlibexp)/ExtUtils/xsubpp -typemap $(perl_privlibexp)/ExtUtils/typemap $< >$@
 
 install: all installdirs
+ifeq ($(enable_shared), yes)
 	$(INSTALL_SHLIB) $(shlib) $(DESTDIR)$(pkglibdir)/plperl$(DLSUFFIX)
+else
+	@echo "*****"; \
+	 echo "* PL/Perl was not installed due to lack of shared library support."; \
+	 echo "*****"
+endif
 
 installdirs:
 	$(mkinstalldirs) $(DESTDIR)$(pkglibdir)
