--- a/configure.in
+++ b/configure.in
@@ -1053,6 +1053,7 @@ AC_SUBST(THREAD_LIBS)
 # functions are marked "not found", which is perfect.
 #
 if test "$enable_thread_safety" = yes -a "$NEED_REENTRANT_FUNCS" = yes ; then
+AC_DEFINE(NEED_REENTRANT_FUNCS, 1, [Define if non *_r libc functions are not thread safe])
 _CFLAGS="$CFLAGS"
 _LIBS="$LIBS"
 CFLAGS="$CFLAGS $THREAD_CPPFLAGS"
