Here is a patch that implements setitimer() on win32. With this patch applied, deadlock detection and statement_timeout now works.
The file timer.c goes into src/backend/port/win32/.

The patch also removes two lines of "printf debugging" accidentally left
in pqsignal.h, in the console control handler.

Magnus Hagander

--- a/src/backend/port/win32/Makefile
+++ b/src/backend/port/win32/Makefile
@@ -12,7 +12,7 @@ subdir = src/backend/port/win32
 top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
-OBJS = sema.o shmem.o
+OBJS = sema.o shmem.o timer.o
 
 all: SUBSYS.o
 
