Adds the -W flag to the pwd call under Win32. This allows directories, which are munged by sed, such as: /e/cygwin/opt/diff9c/pgsql/src/test/regress/data/agg.data to be correctly passed as: e:/cygwin/opt/diff9c/pgsql/src/test/regress/data/agg.data
FWIW, "fixes" a large (> 20) tests under Win32.

Claudio Natoli

--- a/src/test/regress/GNUmakefile
+++ b/src/test/regress/GNUmakefile
@@ -73,8 +73,14 @@ output_files := $(foreach file, $(file_list), expected/$(file).out)
 
 all: $(input_files) $(output_files)
 
+ifneq ($(PORTNAME),win32)
 abs_srcdir := $(shell cd $(srcdir) && pwd)
 abs_builddir := $(shell pwd)
+else
+abs_srcdir := $(shell cd $(srcdir) && pwd -W)
+abs_builddir := $(shell pwd -W)
+endif
+
 
 define sed-command
 sed -e 's,@abs_srcdir@,$(abs_srcdir),g' \
