Fix wording of new bison warning, per Peter.

--- a/configure.in
+++ b/configure.in
@@ -559,7 +559,7 @@ AC_CHECK_PROGS(YACC, ['bison -y'])
 if test "$YACC"; then
   if $YACC --version | sed q | $AWK '{ if ($4 < 1.875) exit 0; else exit 1;}'; then
     AC_MSG_WARN([
-*** If you are going to modify the lexer files or build from CVS, the installed
+*** If you are going to modify the grammar files or build from CVS, the installed
 *** version of Bison is too old.  Bison version 1.875 or later is required.])
   fi
 fi
