Have SGML make clean remove text files output as well

--- a/doc/src/sgml/Makefile
+++ b/doc/src/sgml/Makefile
@@ -238,3 +238,5 @@ clean distclean maintainer-clean:
 	rm -f *.rtf *.tex-ps *.tex-pdf *.dvi *.aux *.log *.ps *.pdf *.out *.eps *.fot
 # index
 	rm -f HTML.index $(GENERATED_SGML)
+# text
+	rm -f INSTALL HISTORY regress_README
