Rename README's to match directory names.  Mention copyright matches PostgreSQL's.

--- a/contrib/xml/Makefile
+++ b/contrib/xml/Makefile
@@ -8,6 +8,6 @@ MODULE_big = pgxml_dom
 OBJS = pgxml_dom.o
 SHLIB_LINK = -lxml2
 DATA_built = pgxml_dom.sql
-DOCS = README.pgxml
+DOCS = README.xml
 
 include $(top_srcdir)/contrib/contrib-global.mk
