--- a/configure.in
+++ b/configure.in
@@ -999,6 +999,7 @@ AC_DEFINE(STRERROR_THREADSAFE, 1, [Define if strerror is not thread safe])
 fi
 if test "$enable_thread_safety" = yes -a "$GETPWUID_THREADSAFE" = yes ; then
 AC_DEFINE(GETPWUID_THREADSAFE, 1, [Define if getpwuid is not thread safe])
+else	PGAC_FUNC_GETPWUID_R_5ARG
 fi
 if test "$enable_thread_safety" = yes -a "$GETHOSTBYNAME_THREADSAFE" = yes ; then
 AC_DEFINE(GETHOSTBYNAME_THREADSAFE, 1, [Define if gethostbyname is not thread safe])
