--- a/src/tools/thread/Makefile
+++ b/src/tools/thread/Makefile
@@ -19,9 +19,9 @@ ifeq ($(THREAD_SUPPORT), )
 $(error You have not configured your template/$$port file.  See the README)
 endif
 
-override CFLAGS += $(THREAD_CPPFLAGS)
+override CFLAGS += $(PTHREAD_CFLAGS)
 
-LDFLAGS += $(THREAD_LIBS)
+LDFLAGS += $(PTHREAD_LIBS)
 
 all: thread_test
 
