--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -147,9 +147,8 @@ TK_LIBS			= @TK_LIBS@
 TK_LIB_SPEC		= @TK_LIB_SPEC@
 TK_XINCLUDES		= @TK_XINCLUDES@
 
-THREAD_SUPPORT		= @THREAD_SUPPORT@
-THREAD_CPPFLAGS		= @THREAD_CPPFLAGS@
-THREAD_LIBS		= @THREAD_LIBS@
+PTHREAD_CFLAGS		= @PTHREAD_CFLAGS@
+PTHREAD_LIBS		= @PTHREAD_LIBS@
 
 have_docbook	= @have_docbook@
 DOCBOOKSTYLE	= @DOCBOOKSTYLE@
