--- a/configure.in
+++ b/configure.in
@@ -1220,22 +1220,23 @@ AC_OUTPUT
 #
 if test "$enable_thread_safety" = yes; then
 if test cross_compiling != yes; then
+AC_CHECK_PROGS(MAKE, gmake make)
 AC_MSG_CHECKING([thread safety of required library functions.])
 #
 # Clean, compile, run, and clean thread test directory.
 # If test fails for any reason, remove Makefile.global so the user can't
 # compile (to simulate a configure failure).
 #
-gmake -C $srcdir/src/tools/thread clean >&5 ||
+$MAKE -C $srcdir/src/tools/thread clean >&5 ||
 	( rm -f src/Makefile.global
 	  AC_MSG_ERROR([Can not clean thread test directory.]))
-gmake -C $srcdir/src/tools/thread >&5 ||
+$MAKE -C $srcdir/src/tools/thread >&5 ||
 	( rm -f src/Makefile.global
 	  AC_MSG_ERROR([Can not build thread test proram.]))
 $srcdir/src/tools/thread/thread_test >&5 ||
 	( rm -f src/Makefile.global
 	  AC_MSG_ERROR([Thread test program failed.]))
-gmake -C $srcdir/src/tools/thread clean >&5 ||
+$MAKE -C $srcdir/src/tools/thread clean >&5 ||
 	( rm -f src/Makefile.global
 	  AC_MSG_ERROR([Can not clean thread test directory.]))
 echo "yes"
