Remove the last traces of Joe Hellerstein's "xfunc" optimization. Patch from Alvaro Herrera. Also, removed lispsort.c, since it is no longer used.

--- a/src/backend/lib/Makefile
+++ b/src/backend/lib/Makefile
@@ -12,7 +12,7 @@ subdir = src/backend/lib
 top_builddir = ../../..
 include $(top_builddir)/src/Makefile.global
 
-OBJS = dllist.o lispsort.o stringinfo.o
+OBJS = dllist.o stringinfo.o
 
 all: SUBSYS.o
 
