Improve thread error message.

--- a/configure.in
+++ b/configure.in
@@ -1231,6 +1231,8 @@ $MAKE -C $srcdir/src/tools/thread >&5 ||
 	  AC_MSG_ERROR([Can not build thread test proram.]))
 $srcdir/src/tools/thread/thread_test >&5 ||
 	( rm -f src/Makefile.global
+	  echo
+	  echo
 	  $srcdir/src/tools/thread/thread_test
 	  AC_MSG_ERROR([Thread test program failed.  Your platform is not thread-safe.]))
 $MAKE -C $srcdir/src/tools/thread clean >&5 ||
