Add $(X) for cross-compiling.  Seems the mingw compiler running on FreeBSD doesn't add .EXE to links.
Michiel Ephraim

--- a/src/bin/pg_resetxlog/Makefile
+++ b/src/bin/pg_resetxlog/Makefile
@@ -20,7 +20,7 @@ OBJS= pg_resetxlog.o pg_crc.o \
 all: submake-libpgport pg_resetxlog
 
 pg_resetxlog: $(OBJS)
-	$(CC) $(CFLAGS) $^ $(LDFLAGS) $(LIBS) -o $@
+	$(CC) $(CFLAGS) $^ $(LDFLAGS) $(LIBS) -o $@$(X)
 
 dirmod.c: % : $(top_srcdir)/src/port/%
 	rm -f $@ && $(LN_S) $< .
