--- a/configure.in
+++ b/configure.in
@@ -1235,31 +1235,31 @@ if test cross_compiling != yes; then
 # compile (to simulate a configure failure).
 #
 AC_MSG_CHECKING([thread safety of required library functions])
-if ! $MAKE -C $srcdir/src/tools/thread clean >&5
-then	rm -f $srcdir/src/Makefile.global
+if ! $MAKE -C src/tools/thread clean >&5
+then	rm -f src/Makefile.global
 	AC_MSG_ERROR([Can not clean thread test directory.])
 fi
-if ! $MAKE -C $srcdir/src/tools/thread >&5
-then	rm -f $srcdir/src/Makefile.global
+if ! $MAKE -C src/tools/thread >&5
+then	rm -f src/Makefile.global
 	AC_MSG_ERROR([Can not build thread test proram.])
 fi
-if ! $srcdir/src/tools/thread/thread_test >&5
-then	rm -f $srcdir/src/Makefile.global
+if ! src/tools/thread/thread_test >&5
+then	rm -f src/Makefile.global
 	echo "no"
 	echo
-	$srcdir/src/tools/thread/thread_test
+	src/tools/thread/thread_test
 	echo
 	AC_MSG_ERROR([Thread test program failed.  Your platform is not thread-safe.])
 fi
-if ! $MAKE -C $srcdir/src/tools/thread clean >&5
-then	rm -f $srcdir/src/Makefile.global
+if ! $MAKE -C src/tools/thread clean >&5
+then	rm -f src/Makefile.global
 	AC_MSG_ERROR([Can not clean thread test directory.])
 fi
 echo "yes"
 else
 AC_MSG_WARN([
 *** Skipping thread test program because of cross-compile build.
-*** Run the program in $srcdir/src/tools/thread on the target matchine.
+*** Run the program in src/tools/thread on the target matchine.
 ])
 fi
 fi
