Enable use of our own timezone library for Win32.

--- a/configure.in
+++ b/configure.in
@@ -893,7 +893,9 @@ AC_LIBOBJ(copydir)
 AC_LIBOBJ(gettimeofday)
 AC_LIBOBJ(open)
 AC_LIBOBJ(pipe)
-AC_LIBOBJ(rand) ;;
+AC_LIBOBJ(rand)
+AC_DEFINE(PGTZ, 1,
+	[Define to 1 to use our own timezone library]) ;;
 esac
 
 # Win32 can't to rename or unlink on an open file
