Integrate timezone library to be called only from Win32.
Timezone code backend integration done by Magnus Hagander.

--- a/configure.in
+++ b/configure.in
@@ -895,7 +895,9 @@ AC_LIBOBJ(open)
 AC_LIBOBJ(pipe)
 AC_LIBOBJ(rand)
 AC_DEFINE(PGTZ, 1,
-	[Define to 1 to use our own timezone library]) ;;
+	[Define to 1 to use our own timezone library])
+PGTZ=yes
+AC_SUBST(PGTZ) ;;
 esac
 
 # Win32 can't to rename or unlink on an open file
