--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -150,6 +150,8 @@ TK_XINCLUDES		= @TK_XINCLUDES@
 PTHREAD_CFLAGS		= @PTHREAD_CFLAGS@
 PTHREAD_LIBS		= @PTHREAD_LIBS@
 
+PGTZ			= @PGTZ@
+
 have_docbook	= @have_docbook@
 DOCBOOKSTYLE	= @DOCBOOKSTYLE@
 COLLATEINDEX	= @COLLATEINDEX@
