--- a/src/Makefile.global.in
+++ b/src/Makefile.global.in
@@ -147,10 +147,10 @@ TK_LIBS			= @TK_LIBS@
 TK_LIB_SPEC		= @TK_LIB_SPEC@
 TK_XINCLUDES		= @TK_XINCLUDES@
 
+USE_PGTZ		= @USE_PGTZ@
+
 PTHREAD_CFLAGS		= @PTHREAD_CFLAGS@
 PTHREAD_LIBS		= @PTHREAD_LIBS@
-
-PGTZ			= @PGTZ@
 
 have_docbook	= @have_docbook@
 DOCBOOKSTYLE	= @DOCBOOKSTYLE@
