--- a/src/backend/Makefile
+++ b/src/backend/Makefile
@@ -16,6 +16,10 @@ DIRS := access bootstrap catalog parser commands executor lib libpq \
 	main nodes optimizer port postmaster regex rewrite \
 	storage tcop utils
 
+ifeq ($(USE_PGTZ), yes)
+DIRS+= $(top_builddir)/src/timezone
+endif
+
 OBJS := $(DIRS:%=%/SUBSYS.o)
 
 ifeq ($(PORTNAME), qnx4)
