--- a/src/bin/pg_controldata/Makefile
+++ b/src/bin/pg_controldata/Makefile
@@ -12,6 +12,8 @@ subdir = src/bin/pg_controldata
 top_builddir = ../../..
 include $(top_builddir)/src/Makefile.global
 
+override CPPFLAGS += -DFRONTEND
+
 OBJS= pg_controldata.o pg_crc.o
 
 all: submake-libpgport pg_controldata
