--- a/src/backend/utils/init/Makefile
+++ b/src/backend/utils/init/Makefile
@@ -12,7 +12,7 @@ subdir = src/backend/utils/init
 top_builddir = ../../../..
 include $(top_builddir)/src/Makefile.global
 
-OBJS = findbe.o globals.o miscinit.o postinit.o
+OBJS = globals.o miscinit.o postinit.o
 
 all: SUBSYS.o
 
